[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling>=1.13" ]

[project]
name = "openhands-ai"
version = "0.59.0"
description = "OpenHands: Code Less, Make More"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "OpenHands" } ]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiohttp>=3.9,!=3.11.13",
  "anthropic[vertex]",
  "anyio==4.9",
  "asyncpg>=0.30,<1",
  "bashlex>=0.18,<0.19",
  "boto3",
  "browsergym-core==0.13.3",
  "deprecated",
  "dirhash",
  "docker",
  "fastapi",
  "fastmcp>=2.12.4",           # Note: 2.12.0+ has breaking auth API changes
  "google-api-python-client>=2.164,<3",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "google-cloud-aiplatform",
  "google-genai",
  "google-generativeai",
  "html2text",
  "httpx-aiohttp>=0.1.8,<0.2",
  "ipywidgets>=8.1.5,<9",
  "jinja2>=3.1.3,<4",
  "joblib",
  "json-repair",
  "jupyter-kernel-gateway",
  "kubernetes>=33.1,<34",
  "libtmux>=0.37,<0.40",
  "litellm!=1.64.4,!=1.67.*,>=1.74.3,<1.78",
  "memory-profiler>=0.61,<1",
  "numpy",
  "openai==1.99.9",
  "openhands-aci==0.3.2",
  # V1 dependencies
  "openhands-agent-server @ git+https://github.com/All-Hands-AI/agent-sdk.git@8d8134ca5a87cc3e90e3ff968327a7f4c961e22e#subdirectory=openhands-agent-server",
  "openhands-sdk @ git+https://github.com/All-Hands-AI/agent-sdk.git@8d8134ca5a87cc3e90e3ff968327a7f4c961e22e#subdirectory=openhands-sdk",
  "opentelemetry-api>=1.33.1,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.33.1,<2",
  "pathspec>=0.12.1,<0.13",
  "pexpect",
  "pg8000>=1.31.5,<2",
  "prompt-toolkit>=3.0.50,<4",
  "protobuf>=5,<6",
  "psutil",
  "pybase62>=1,<2",
  "pygithub>=2.5,<3",
  "pyjwt>=2.9,<3",
  "pylatexenc",
  "pypdf2",
  "python-docx",
  "python-dotenv",
  "python-frontmatter>=1.1,<2",
  "python-jose[cryptography]>=3.3",
  "python-json-logger>=3.2.1,<4",
  "python-multipart",
  "python-pptx",
  "python-socketio>=5.11.4,<6",
  "pythonnet",
  "pyyaml>=6.0.2,<7",
  "qtconsole>=5.6.1,<6",
  "rapidfuzz>=3.9,<4",
  "redis>=5.2,<7",
  "shellingham>=1.5.4,<2",
  "sqlalchemy[asyncio]>=2.0.40,<3",
  "sse-starlette>=2.1.3,<3",
  "tenacity>=8.5,<10",
  "termcolor",
  "toml",
  "tomlkit>=0.13.3",
  "tornado",
  "types-toml",
  "uvicorn",
  "whatthepatch>=1.0.6,<2",
  "zope-interface==7.2",
]

optional-dependencies.third_party_runtimes = [
  "daytona==0.24.2",
  "e2b>=1.0.5,<1.8",
  "modal>=0.66.26,<1.2",
  "runloop-api-client==0.50",
]
urls.Repository = "https://github.com/All-Hands-AI/OpenHands"
scripts.openhands = "openhands.cli.entry:main"

[dependency-groups]
dev = [
  "build",
  "mypy==1.17",
  "pre-commit==4.2",
  "pytest>=8.4,<9",
  "ruff==0.12.5",
  "types-setuptools",
]
test = [
  "gevent>=24.2.1,<26",
  "pandas",
  "pip>=25.2",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-forked",
  "pytest-playwright>=0.7,<0.8",
  "pytest-rerunfailures>=16.0.1",
  "pytest-timeout>=2.4,<3",
  "pytest-xdist",
  "reportlab",
]
runtime = [
  "flake8",
  "jupyterlab",
  "notebook",
]
evaluation = [
  "boto3-stubs[s3]>=1.37.19,<2",
  "browsergym==0.13.3",
  "browsergym-miniwob==0.13.3",
  "browsergym-visualwebarena==0.13.3",
  "browsergym-webarena==0.13.3",
  "commit0",
  "datasets",
  "evaluate",
  "func-timeout",
  "gdown",
  "joblib",
  "matplotlib",
  "multi-swe-bench==0.1.2",
  "pyarrow==21",
  "retry",
  "seaborn",
  "streamlit",
  "swebench @ git+https://github.com/ryanhoangt/SWE-bench.git@fix-modal-patch-eval",
  "swegym @ git+https://github.com/SWE-Gym/SWE-Bench-Package.git",
  "sympy",
  "tabulate",
  "visualswebench @ git+https://github.com/luolin101/Visual-SWE-bench.git",
  "whatthepatch",
]
testgeneval = [
  "fuzzywuzzy>=0.18,<0.19",
  "python-levenshtein>=0.26.1,<0.28",
  "rouge>=1.0.1,<2",
  "tree-sitter-python>=0.23.6,<0.24",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "openhands/**",
  "third_party/**",
  "microagents/**",
  "openhands/integrations/vscode/openhands-vscode-0.0.1.vsix",
]

[tool.hatch.build.targets.sdist.force-include]
"pyproject.toml" = "openhands/pyproject.toml"
"uv.lock" = "openhands/uv.lock"

[tool.hatch.build.targets.wheel.force-include]
"pyproject.toml" = "openhands/pyproject.toml"
"uv.lock" = "openhands/uv.lock"

[tool.autopep8]
ignore = [ "E501" ]

[tool.black]
skip-string-normalization = true

[tool.ruff]
lint.select = [ "D" ]
lint.ignore = [ "D1" ]
lint.pydocstyle.convention = "google"

[tool.coverage.run]
concurrency = [ "gevent" ]
relative_files = true
omit = [ "enterprise/tests/*", "**/test_*" ]
